<resources>
    <string name="app_name" translatable="false">Buttcoin</string>
    <string-array name="ticker_titles">
        <item>15m: </item>
        <item>Last: </item>
        <item>Buy: </item>
        <item>Sell: </item>
    </string-array>
    <string-array name="block_titles">
        <item>Block Number</item>
        <item>Hash</item>
        <item>Version</item>
        <item>Confirmations</item>
        <item>Time</item>
        <item>nb_txs</item>
        <item>Merkleroot</item>
        <item>Next Block Number</item>
        <item>Previous Block Number</item>
        <item>Next Block Hash</item>
        <item>Previous Block Hash</item>
        <item>Fee</item>
        <item>Vout Sum</item>
        <item>Size</item>
        <item>Difficulty</item>
        <item>Days Destroyed</item>
        <item>Extras</item>
    </string-array>
    <string-array name="fragment_descriptors">
        <item> View Block Info </item>
        <item> View Wallet Balance </item>
        <item> View Exchange Rates </item>
        <item> View Price Chart </item>
    </string-array>

    <string name="go_button">Go</string>
    <string name="blank_message" translatable="false">.</string>
    <string name="back_button">Back</string>
    <string name="add_to_database">Store</string>
    <string name="select_option">Please Select a Wallet</string>
    <string name="get_new_wallet">Get New Wallet</string>
    <string name="wallet_balance_displayer">Wallet Balance: %1$s BTC</string>
</resources>
